--- a/Tugas Praktikum web/TP4.html
+++ b/Tugas Praktikum web/TP4.html
@@ -211,7 +211,7 @@
                 <td>1</td>
                 <td>Nikah</td>
                 <td>Orang Tua</td>
-                <td>Indonesia</td>
+                <td>WNI</td>
                 <td>-</td>
                 <td>-</td>
                 <td>alm. abdul</td>
@@ -221,7 +221,7 @@
                 <td>2</td>
                 <td>Nikah</td>
                 <td>Orang Tua</td>
-                <td>Indonesia</td>
+                <td>WNI</td>
                 <td>-</td>
                 <td>-</td>
                 <td>Alm. agung</td>
@@ -231,7 +231,7 @@
                 <td>3</td>
                 <td>Belum Nikah</td>
                 <td>Anak</td>
-                <td>Indonesia</td>
+                <td>WNI</td>
                 <td>-</td>
                 <td>-</td>
                 <td>Nurman Hakim</td>
@@ -241,7 +241,7 @@
                 <td>4</td>
                 <td>Belum Nikah</td>
                 <td>Anak</td>
-                <td>Indonesia</td>
+                <td>WNI</td>
                 <td>-</td>
                 <td>-</td>
                 <td>Nurman Hakim</td>
@@ -251,7 +251,7 @@
                 <td>5</td>
                 <td>Belum Nikah</td>
                 <td>Anak</td>
-                <td>Indonesia</td>
+                <td>WNI</td>
                 <td>-</td>
                 <td>-</td>
                 <td>Nurman Hakim</td>
@@ -261,7 +261,7 @@
                 <td>6</td>
                 <td>Belum Nikah</td>
                 <td>Anak</td>
-                <td>Indonesia</td>
+                <td>WNI</td>
                 <td>-</td>
                 <td>-</td>
                 <td>Nurman Hakim</td>
